--- a/source/drupal/var/drupal-config/sync/entity_browser.browser.images.yml
+++ b/source/drupal/var/drupal-config/sync/entity_browser.browser.images.yml
@@ -28,7 +28,7 @@ widgets:
       extensions: 'jpg jpeg png gif'
       media_bundle: images
       upload_location: 'public://'
-      multiple: '1'
+      multiple: true
       submit_text: 'Select files'
     uuid: bd715a30-eb3f-4712-9117-ba8614780507
     weight: 2
