--- a/source/drupal/var/drupal-config/sync/media_entity.bundle.images.yml
+++ b/source/drupal/var/drupal-config/sync/media_entity.bundle.images.yml
@@ -12,5 +12,5 @@ queue_thumbnail_downloads: false
 new_revision: false
 type_configuration:
   source_field: field_images
-  gather_exif: '0'
+  gather_exif: false
 field_map: {  }
