--- a/source/drupal/var/drupal-config/sync/field.storage.node.field_market_mediakit_pdf.yml
+++ b/source/drupal/var/drupal-config/sync/field.storage.node.field_market_mediakit_pdf.yml
@@ -1,20 +1,18 @@
-uuid: c6d60294-a29c-45cc-a0e3-9c7b264e5b15
+uuid: e13550ed-8e60-4f7f-be5a-5a652a9d0a6a
 langcode: en
 status: true
 dependencies:
   module:
-    - file
     - node
 id: node.field_market_mediakit_pdf
 field_name: field_market_mediakit_pdf
 entity_type: node
-type: file
+type: string
 settings:
-  display_field: false
-  display_default: false
-  uri_scheme: public
-  target_type: file
-module: file
+  max_length: 255
+  is_ascii: false
+  case_sensitive: false
+module: core
 locked: false
 cardinality: 1
 translatable: true
